--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-    "name": "ps-git",
-    "main": "index.ts",
-    "devDependencies": {
-        "@types/node": "^18",
-        "typescript": "^5.0.0"
-    },
-    "dependencies": {
-        "@pulumi/github": "^4.8.1",
-        "@pulumi/pulumi": "^3.113.0"
-    }
+  "name": "demo-git",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
