--- a/package.json
+++ b/package.json
@@ -9,5 +9,13 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "packageManager": "pnpm@9.12.1"
+  "packageManager": "pnpm@9.12.1",
+  "devDependencies": {
+    "@eslint/js": "^9.12.0",
+    "@nx/eslint": "20.0.0",
+    "eslint": "~8.57.0",
+    "globals": "^15.11.0",
+    "nx": "20.0.0",
+    "typescript-eslint": "^8.9.0"
+  }
 }
