chore: update ci

--- a/.github/workflows/check_do_not_merge.yaml
+++ b/.github/workflows/check_do_not_merge.yaml
@@ -11,7 +11,7 @@ on:
       - unlabeled
 
 jobs:
-  ok-to-merge:
+  check-do-not-merge:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
